Bug 1063121 - Dropping out of fullscreen mode without titlebar breaks titlebar/tabs layout. r=jimm, a=lmandel